monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/part-of: monitoring
  name: monitoring
