monitoring/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik
  namespace: monitoring

spec:
  rules:
    - host: grafana.tang.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
    - host: prometheus.tang.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
    - host: alertmanager.tang.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
